--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -22,7 +22,7 @@
         </div>
                         <div class="card-image">
                     <% if post.image.url %>
-                        <%= image_tag("#{post.image}") %>
+                        <img src="<%= post.image.url %>">
                     <% end %>
                     
                 </div>
